[project]
name = "abadis"
version = "0.0.1"
authors = [
  { name="dadashzadeh", email="webdadashzadeh@gmail.com" },
]
description = "website scraper abadis"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/dadashzadeh/abadis"
Issues = "https://github.com/dadashzadeh/abadis/issues"
